--- a/吴方言.html
+++ b/吴方言.html
@@ -6,7 +6,7 @@
         <p>又称江东话、江南话、吴越语。周朝至今有将近三千多年悠久历史，底蕴深厚。在中国分布于今浙江、江苏南部、上海、安徽南部、江西东北部、福建北一角，使用人口9000多万。吴语是中国汉语七大方言之一，国际语言代码为wuu。从历史、文风、语言特性分析，吴语近中古雅言，继承中古汉语的整齐八声调和三十六字母框架体系。现代吴语比官话具有更多古音因素，语音与《切韵》《广韵》等古代韵书高度吻合。</p>
         <p>吴语保留全部浊音，保留平上去入的平仄音韵，部分地区保留尖团音分化，保留较多古汉语用字用语，文化价值高。吴语语法结构和普通话差别大，有数万个特有词汇和诸多特征本字，是江南人思维方式、生活情调、文化涵养的生动体现。</p>
         <h2>分片</h2>
-        <img src="C:\Users\HP\Desktop\本地化作业\images\吴方言.png">
+        <img src="images\吴方言.png">
         <p>北部吴语：北部吴语又叫吴语太湖片，为吴语的核心，扎根于创造辉煌历史文化的典型传统江南。北吴片内部通话程度非常大，合为吴语太湖片一个语片。太湖片分六小片。</p>
         <p>南部吴语：南部吴语分歧很大，甚至片内也有部分点不能通话。台州片语音与北吴最接近，婺州等地跟北吴尚有通话可能，而东瓯片与其他片差异最大，不能通话。温州话具有古百越语和楚语底层，所以即便吴语区的人也难懂温州话。衢州市和上饶市的市区话带有较多的太湖片特点，跟周围乡间的处衢话不同。处在蛮话区与闽南话区之间的金乡镇，人口1.6万，为明初金乡卫驻军的后裔，属太湖片吴语。南部吴语相邻两片间有些方言带过渡性质。</p>
         <p>西部吴语：西部吴语分布于皖南、江苏西南部及浙江西北角。宣吴在太平天国时期遭受重创，流民问题严重，仅乡镇尚存吴语。</p>
