--- a/官话语言.html
+++ b/官话语言.html
@@ -3,7 +3,7 @@
         <title>官话语言</title>
         <link rel="stylesheet" type="text/css" href="子网页背景.css">
         <h1>官话语言</h1>
-        <img src="C:\Users\HP\Desktop\本地化作业\images\官话语言.png">
+        <img src="images\官话语言.png">
         <h2>东北官话</h2>
         <p>东北官话分布于黑龙江省、吉林省、辽宁省的绝大部，内蒙古自治区的东部，河北省东北部。170多个市县旗，使用人口约1.2亿。东北官话可分为吉沈片、哈阜片、黑松片，每片又可分为若干小片。</p>
         <h2>北京官话</h2>
