--- a/客家方言.html
+++ b/客家方言.html
@@ -3,13 +3,13 @@
         <title>客家方言</title>
         <link rel="stylesheet" type="text/css" href="子网页背景.css">
         <h1>客家方言</h1>
-        <img src="C:\Users\HP\Desktop\本地化作业\images\客家方言3.png" width="640" height="360" />
+        <img src="images\客家方言3.png" width="640" height="360" />
         <p>东部和北部、福建西部、江西南部和广西东南部为主。客家人从中原迁徙到南方，虽然居住分散，但客家方言仍自成系统，内部差别不太大。四川客家人与广东客家人、浙江客家人与福建客家人相隔千山万水，彼此可以交谈。粤闽赣边区一带是客家最集中的地区，因而也是客家方言最流行的地区。在海外，东南亚印度尼西亚、马来西亚、新加坡、泰国、越南、菲律宾以及美洲华侨、华裔中也有不少讲客家话的。客家方言也算庞大，世界总人口超7000万人。</p>
         <p>客家话是台湾的官方语言，也是除普通话外唯一被外国（苏里南共和国）列为法定语言的汉语方言。客语继承了较多古汉语的特性，如完整的入声韵尾[-p]、[-t]、[-k]。一般认为，客语和后期中古汉语（唐宋二代为准）之间的承袭关系较为明显。</p>
         <h2>分片</h2>
-        <img src="C:\Users\HP\Desktop\本地化作业\images\客家方言1.png">
+        <img src="images\客家方言1.png">
         <p>南片：主要包括广东、广西、福建东南部、台湾的客语，香港、澳门和海外的客语也属南片。词汇上与北片差异大，土语词汇多且词汇内部一致性较高，入声保留较为完整。总体而言南片面貌比北片古老。</p>
-        <img src="C:\Users\HP\Desktop\本地化作业\images\客家方言2.png" width="640" height="360" />
+        <img src="images\客家方言2.png" width="640" height="360" />
         <p>北片：主要包括江西、闽西等地的客语。北部大片词汇受赣语、官话、闽北语影响，与南部大片词汇差异较大。各地入声韵尾保留完整程度不一。根据北片特点，又细分为宁龙片、于桂片、铜鼓片、汀北片。</p>
         <h3>注：</h3>
         <p>1.香港的新界客语属客语粤台片新惠小片，与广东深圳、惠阳、惠东的客家语高度接近，与其它主流客语都可以互通。约从1960年代开始，在广东的客家地区有大批人员移居香港，他们带来了广东本地的客语。大多数移民的客语和新界客语可以互通。</p>
