--- a/少数民族.html
+++ b/少数民族.html
@@ -3,7 +3,7 @@
         <title>少数民族</title>
         <link rel="stylesheet" type="text/css" href="子网页背景.css">
         <h1>少数民族</h1>
-        <img src="C:\Users\HP\Desktop\本地化作业\images\少数民族.png" width="800" height="360" />
+        <img src="images\少数民族.png" width="800" height="360" />
         <p>中国少数民族语言方言的划分主要根据区别性语言结构特征的分布，分为藏缅、苗瑶、壮侗三个语族。</p>
         <h2>壮侗语族</h2>
         <p>在中国说壮侗语族语言的人口有2300多万。分布在广西壮族自治区和云南、贵州、湖南、广东、海南五省。包括壮语、布依语、傣语、侗语、水语、仫佬语、毛南语、拉珈语、黎语、仡佬语等。</p>
