--- a/粤方言.html
+++ b/粤方言.html
@@ -2,10 +2,10 @@
     <body>
         <h1>粤方言</h1>
         <link rel="stylesheet" type="text/css" href="子网页背景.css">
-        <img src="C:\Users\HP\Desktop\本地化作业\images\粤方言1.png" width="640" height="360" />
+        <img src="images\粤方言1.png" width="640" height="360" />
         <p>粤方言又称广东话，粤方言分为6个片：广府片、四邑片、高阳片、莞宝片、香山片、桂南片。其中广府片使用的广州话是粤方言的代表。粤方言有源自北方中原的雅言、源自楚国的楚语等说法，是保留古汉语成分较多的一种语言。古汉语有平、上、去、入四声，其中古代的入声字，全套都保留在粤方言中。清代学者陈澧认为广州方言的音调合于隋唐韵书《切韵》，国学大师南怀瑾先生认为粤语是唐宋时期的“国语”。粤方言标准音为广府片中的广州话。</p>
-        <img src="C:\Users\HP\Desktop\本地化作业\images\粤方言2.png" width="250" height="250" />
-        <img src="C:\Users\HP\Desktop\本地化作业\images\粤方言3.png" width="300" height="250" />
+        <img src="images\粤方言2.png" width="250" height="250" />
+        <img src="images\粤方言3.png" width="300" height="250" />
         <p>粤语以珠江三角洲为分布中心，在中国的广东、广西壮族自治区、海南、香港、澳门，及北美、欧洲和澳洲、新西兰、以及东南亚一些国家的华人社区中使用，是香港、澳门的官方语言。使用人数超过一亿，大多数在广东广西地区。</p>
     </body>
 </html>
